--- a/roulette/roulette.css
+++ b/roulette/roulette.css
@@ -180,7 +180,7 @@
     border-width: 3px;
     border: 3px solid;
     border-radius: 10px;
-    padding: 4px;
+    padding: 10px;
     max-width: fit-content;
     max-height: fit-content;
     margin: 20px auto;
